added a tag to terms and conditions

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <p class="script">
-                    By clicking <span>Register</span>, you agree to the Terms and Conditions 
+                    By clicking <span>Register</span>, you agree to the <a href='#' class="link">Terms and Conditions</a> 
                     set out by this site, including our Cookie use
                 </p>
             </div>
