added btn class to make code more dry

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             </div>
 
             <div class="inputContainer">
-                <button class="registerButton">Register</button>
-                <button class="signinButton">Sign In</button>
+                <button class="btnClass registerButton">Register</button>
+                <button class="btnClass signinButton">Sign In</button>
             </div>
 
         </form>
